--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         nim: [2.0.0]
     steps:
     - uses: actions/checkout@v2
-    - name: Run Functional Tests
+    - name: Run Interop Tests
       run: |
         docker pull nimlang/nim:${{ matrix.nim }}
         docker run --env-file .env  --rm -v `pwd`:/usr/src/app -w /usr/src/app nimlang/nim:${{ matrix.nim }} \
@@ -27,3 +27,15 @@ jobs:
           (nimble interopserve &) && \
           sleep 10s && \
           nimble interoptest"
+    - name: Run Examples
+      run: |
+        docker pull nimlang/nim:${{ matrix.nim }}
+        docker run --env-file .env  --rm -v `pwd`:/usr/src/app -w /usr/src/app nimlang/nim:${{ matrix.nim }} \
+        /bin/bash -c "git config --global --add safe.directory /usr/src/app && \
+          apt update && \
+          apt install -y make && \ 
+          make install_mkcert && \
+          nimble install -y && \
+          (nimble exampleserve &) && \
+          sleep 10s && \
+          nimble exampleclient"
