--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           (nimble interopserve &) && \
           sleep 10s && \
           nimble interoptest"
-    - name: Run Examples
+    - name: Run tls examples
       run: |
         docker pull nimlang/nim:${{ matrix.nim }}
         docker run --env-file .env  --rm -v `pwd`:/usr/src/app -w /usr/src/app nimlang/nim:${{ matrix.nim }} \
@@ -39,6 +39,18 @@ jobs:
           (nimble exampleserve &) && \
           sleep 10s && \
           nimble exampleclient"
+    - name: Run insecure examples
+      run: |
+        docker pull nimlang/nim:${{ matrix.nim }}
+        docker run --env-file .env  --rm -v `pwd`:/usr/src/app -w /usr/src/app nimlang/nim:${{ matrix.nim }} \
+        /bin/bash -c "git config --global --add safe.directory /usr/src/app && \
+          apt update && \
+          apt install -y make && \ 
+          make install_mkcert && \
+          nimble install -y && \
+          (nimble exampleserveinsecure &) && \
+          sleep 10s && \
+          nimble exampleclientinsecure"
     - name: Run Tests
       run: |
         docker pull nimlang/nim:${{ matrix.nim }}
