--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ examples/tls_client
 examples/tls_server
 examples/insecure_client
 examples/insecure_server
+examples/multi_thread_server
 tests/interop/testserver
 tests/interop/testclient
 tests/testserver
