--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@ examples/tls_client
 examples/tls_server
 examples/insecure_client
 examples/insecure_server
+examples/multi_thread_server
 tests/interop/testserver
 tests/interop/testclient
 tests/testserver
 tests/testclient
+tests/functional/tmultithreadclient
+tests/functional/tmultithreadserver
 go_server
 go_client
